<resources>
    <string name="app_name">Web Project</string>
    <string name="title">Registro de Personal</string>
    <string name="nombre">Nombres</string>
    <string name="apellido">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="twitter">Twitter</string>
    <string name="skype">Skype</string>
    <string name="celular">Celular</string>
    <string name="enviar">Guardar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_ingreso">Ingreso</string>
    <string name="usuario">Usuario</string>
    <string name="Error_campo">Debe ingresar este campo</string>
    <string name="title_activity_login_activityss">Sign in</string>
    <string name="Error_email">email invalido</string>
    <string name="Error_phone">Telefono invalido</string>
    <string name="guardado">Elemento guardado</string>
    <string name="error_guardado">Ocurrio algo.. No se guardo el elemento</string>
    <string name="listAll">Lista - Personal</string>
    <string name="title_activity_list_content">list_content</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_principal">principal</string>
</resources>
